# CrewAI-Service-Team

./: README.md  pyproject.toml  report1.md
src/serviceteam/: crew.py  main.py
src/serviceteam/config/: agents.yaml  tasks.yaml
src/serviceteam/tools/: create_meeting.py  get_user_input.py  readData.py  searchTool.py
